--- a/league/templates/league/leagueHome.html
+++ b/league/templates/league/leagueHome.html
@@ -2,47 +2,51 @@
 
 <body>
     <div class="container">
-
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container">
-                <h1 class="display-4">{{ activeLeague }}</h1>
-                {% if leagueAdmin == True %}
-                <a href="/league/admin/{{ activeLeague }}" class="btn btn-info" disabled role="button">League Settings</a>{% endif %}
-            </div>
-        </div>
-
+        <!-- League title and league settings-->
         <div class="row">
-            <div class="col-8">
-                <!--<main role="main" class="container bootdey.com">-->
-                <div class="overflow-auto" style="height: 500px; overflow-y:auto">
-                    <div class="my-3 p-3 bg-white rounded box-shadow">
-                        <h6 class="border-bottom border-gray pb-2 mb-0 ">Message Board</h6>
-                        {% for currentMessage in leagueMessages %}
-                        <div class="media text-muted pt-3 ">
-                            <img src="https://bootdey.com/img/Content/avatar/avatar7.png " alt=" " class="mr-2 rounded " width="32 " height="32 ">
-                            <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray ">
-                                <strong class="d-block text-gray-dark ">@{{ currentMessage.user.username }}</strong>{{ currentMessage.message }}
-                            </p>
-                        </div>
-                        {% endfor %}
+            <div class="col-lg-8">
+                <div class="row">
+                    <div class="col-sm-8">
+                        <h1 class="display-4card-title">{{ activeLeague }}</h1>
+                    </div>
+                    <div class="col-sm-4">
+                        {% if leagueAdmin == True %}
+                        <a href="/league/admin/{{ activeLeague }}" class="btn btn-info" role="button">League Settings</a>{% endif %}
                     </div>
                 </div>
-                <!--</main>-->
-                <form method="POST" action="">
-                    {% csrf_token %}
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="Type message" aria-label="Message" name="message" aria-describedby="basic-addon2 ">
-                        <div class="input-group-append">
-                            <button class="btn btn-outline-secondary " type="submit">Send</button>
-                            <!--<input type="submit " class="btn btn-outline-secondary " value="Send ">-->
+                <div class="row">
+                    <div class="col">
+                        <!--<main role="main" class="container bootdey.com">-->
+                        <div class="overflow-auto" style="height: 500px; overflow-y:auto">
+                            <div class="my-3 p-3 bg-white rounded box-shadow">
+                                <h6 class="border-bottom border-gray pb-2 mb-0 ">Message Board</h6>
+                                {% for currentMessage in leagueMessages %}
+                                <div class="media text-muted pt-3 ">
+                                    <img src="https://bootdey.com/img/Content/avatar/avatar7.png " alt=" " class="mr-2 rounded " width="32 " height="32 ">
+                                    <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray ">
+                                        <strong class="d-block text-gray-dark ">@{{ currentMessage.user.username }}</strong>{{ currentMessage.message }}
+                                    </p>
+                                </div>
+                                {% endfor %}
+                            </div>
                         </div>
+                        <!--</main>-->
+                        <form method="POST" action="">
+                            {% csrf_token %}
+                            <div class="md-form input-group mb-3">
+                                <input type="text" class="form-control" name="message" placeholder="Type Message.." aria-label="Message" aria-describedby="MaterialButton-addon2">
+                                <div class="input-group-append">
+                                    <button class="btn btn-md btn-secondary m-0 px-3" type="submit" id="MaterialButton-addon2">Post</button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
-                </form>
+                </div>
             </div>
-            <div class="col-4 ">
+            <div class="col-lg-4">
                 <h5>Standings</h5>
-                <table class="table">
-                    <thead class="thead-dark ">
+                <table class="table btn-table text-center">
+                    <thead>
                         <tr>
                             <th scope="col ">Player</th>
                             <th scope="col ">Score</th>
@@ -59,6 +63,7 @@
                 </table>
             </div>
         </div>
+
     </div>
 </body>
 {% endblock %}
