--- a/picks/templates/picks/picks.html
+++ b/picks/templates/picks/picks.html
@@ -2,117 +2,132 @@
 
 <body>
     <div class="container">
-        <div class="card text-center">
-            <div class="card-header">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-sm-8">
-                            <h2 class="card-title">League Home: {{ activeLeague }}</h2>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="dropdown">
-                                <button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select League</button>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                    {% for league in userLeagues %}
-                                    <a class="dropdown-item" type="submit" href="/picks/1/{{ league.name }}/">{{ league.name }}</a> {% endfor %}
-                                </div>
-                            </div>
+        <!-- League title and league picker-->
+        <div class="row">
+            <div class="col-sm-8">
+                <h1 class="display-4card-title">{{ activeLeague }}</h1>
+            </div>
+            <div class="col-sm-4">
+                <div class="dropdown float-right">
+                    <button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select League</button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        {% for league in userLeagues %}
+                        <a class="dropdown-item" type="submit" href="/home/1/{{ league.name }}/">{{ league.name }}</a> {% endfor %}
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Week title and week picker-->
+        <div class="row">
+            <div class="col-4">
+                <div class="float-left">
+                    <h4>Week {{ currentWeek.id }} Games</h4>
+                </div>
+            </div>
+            <div class="col-8">
+                <div class="float-right">
+                    <div class="dropdown">
+                        <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Select Week
+                </button>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="/picks/1/">Week 1</a>
+                            <a class="dropdown-item" href="/picks/2/">Week 2</a>
+                            <a class="dropdown-item" href="/picks/3/">Week 3</a>
+                            <a class="dropdown-item" href="/picks/4/">Week 4</a>
+                            <a class="dropdown-item" href="/picks/5/">Week 5</a>
+                            <a class="dropdown-item" href="/picks/6/">Week 6</a>
+                            <a class="dropdown-item" href="/picks/7/">Week 7</a>
+                            <a class="dropdown-item" href="/picks/8/">Week 8</a>
+                            <a class="dropdown-item" href="/picks/9/">Week 9</a>
+                            <a class="dropdown-item" href="/picks/10/">Week 10</a>
+                            <a class="dropdown-item" href="/picks/11/">Week 11</a>
+                            <a class="dropdown-item" href="/picks/12/">Week 12</a>
+                            <a class="dropdown-item" href="/picks/13/">Week 13</a>
+                            <a class="dropdown-item" href="/picks/14/">Week 14</a>
+                            <a class="dropdown-item" href="/picks/15/">Week 15</a>
+                            <a class="dropdown-item" href="/picks/16/">Week 16</a>
+                            <a class="dropdown-item" href="/picks/17/">Week 17</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <h4>Week {{ currentWeek.id }} Games</h4>
-        <div class="dropdown">
-            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Select Week
-                </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="/picks/1/">Week 1</a>
-                <a class="dropdown-item" href="/picks/2/">Week 2</a>
-                <a class="dropdown-item" href="/picks/3/">Week 3</a>
-                <a class="dropdown-item" href="/picks/4/">Week 4</a>
-                <a class="dropdown-item" href="/picks/5/">Week 5</a>
-                <a class="dropdown-item" href="/picks/6/">Week 6</a>
-                <a class="dropdown-item" href="/picks/7/">Week 7</a>
-                <a class="dropdown-item" href="/picks/8/">Week 8</a>
-                <a class="dropdown-item" href="/picks/9/">Week 9</a>
-                <a class="dropdown-item" href="/picks/10/">Week 10</a>
-                <a class="dropdown-item" href="/picks/11/">Week 11</a>
-                <a class="dropdown-item" href="/picks/12/">Week 12</a>
-                <a class="dropdown-item" href="/picks/13/">Week 13</a>
-                <a class="dropdown-item" href="/picks/14/">Week 14</a>
-                <a class="dropdown-item" href="/picks/15/">Week 15</a>
-                <a class="dropdown-item" href="/picks/16/">Week 16</a>
-                <a class="dropdown-item" href="/picks/17/">Week 17</a>
+        <div class="row">
+            <div class="col">
+                <form action="" method="POST">
+                    <table class="table">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th scope="col"></th>
+                                <th scope="col">Home</th>
+                                <th scope="col">Away</th>
+                                <th scope="col"></th>
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            <fieldset class="form-group">
+                                {% if currentWeek.picksLocked == True %} {% for currentPick in pickData %}
+                                <tr>
+                                    <td><img src="/static/media/{{ currentPick.homeTeam }}.png" alt="{{ currentPick.homeTeam }}" class="img-fluid" width="50" height="50"></td>
+                                    <td>
+                                        <div class="form-check disabled">
+                                            {% if currentPick.pick == currentPick.homeTeam %}
+                                            <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.homeTeam }}" value="{{ currentPick.homeTeam }}" checked disabled> {% else %}
+                                            <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.homeTeam }}" value="{{ currentPick.homeTeam }}" disabled>{% endif %}
+                                            <label class="form-check-label" for="{{ currentPick.homeTeam }}">
+                                        {{ currentPick.homeTeam }}
+                              </label>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="form-check disabled">
+                                            {% if currentPick.pick == currentPick.awayTeam %}
+                                            <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.awayTeam }}" value="{{ currentPick.awayTeam }}" checked disabled> {% else %}
+                                            <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.awayTeam }}" value="{{ currentPick.awayTeam }}" disabled> {% endif %}
+                                            <label class="form-check-label" for="{{ currentPick.awayTeam }}">
+                                        {{ currentPick.awayTeam }}
+                              </label>
+                                        </div>
+                                    </td>
+                                    <td><img src="/static/media/{{ currentPick.awayTeam }}.png" alt="{{ currentPick.awayTeam }}" class="img-fluid" width="50" height="50"></td>
+                                </tr>
+                                {% endfor %} {% csrf_token %} {% else %} {% for currentPick in pickData %}
+                                <tr>
+                                    <td><img src="/static/media/{{ currentPick.homeTeam }}.png" alt="{{ currentPick.homeTeam }}" class="img-fluid" width="50" height="50"></td>
+                                    <td>
+                                        <div class="form-check">
+                                            {% if currentPick.pick == currentPick.homeTeam %}
+                                            <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.homeTeam }}" value="{{ currentPick.homeTeam }}" checked> {% else %}
+                                            <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.homeTeam }}" value="{{ currentPick.homeTeam }}">{% endif %}
+                                            <label class="form-check-label" for="{{ currentPick.homeTeam }}">
+                                        {{ currentPick.homeTeam }}
+                              </label>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="form-check">
+                                            {% if currentPick.pick == currentPick.awayTeam %}
+                                            <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.awayTeam }}" value="{{ currentPick.awayTeam }}" checked> {% else %}
+                                            <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.awayTeam }}" value="{{ currentPick.awayTeam }}"> {% endif %}
+                                            <label class="form-check-label" for="{{ currentPick.awayTeam }}">
+                                        {{ currentPick.awayTeam }}
+                              </label>
+                                        </div>
+                                    </td>
+                                    <td><img src="/static/media/{{ currentPick.awayTeam }}.png" alt="{{ currentPick.awayTeam }}" class="img-fluid" width="50" height="50"></td>
+                                </tr>
+                                {% endfor %} {% csrf_token %} {% endif %}
+                            </fieldset>
+                        </tbody>
+                    </table>
+                    <div class="text-center">
+                        <input type="submit" class="btn btn-success" value="Save Picks">
+                    </div>
+                </form>
             </div>
         </div>
-        <form action="" method="POST">
-            <table class="table">
-                <thead class="thead-dark">
-                    <tr>
-                        <th scope="col"></th>
-                        <th scope="col">Home</th>
-                        <th scope="col">Away</th>
-                        <th scope="col"></th>
-                    </tr>
-                </thead>
-
-                <tbody>
-                    <fieldset class="form-group">
-                        {% if currentWeek.picksLocked == True %} {% for currentPick in pickData %}
-                        <tr>
-                            <td><img src="/static/media/{{ currentPick.homeTeam }}.png" alt="{{ currentPick.homeTeam }}" class="img-fluid" width="50" height="50"></td>
-                            <td>
-                                <div class="form-check disabled">
-                                    {% if currentPick.pick == currentPick.homeTeam %}
-                                    <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.homeTeam }}" value="{{ currentPick.homeTeam }}" checked disabled> {% else %}
-                                    <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.homeTeam }}" value="{{ currentPick.homeTeam }}" disabled>{% endif %}
-                                    <label class="form-check-label" for="{{ currentPick.homeTeam }}">
-                                        {{ currentPick.homeTeam }}
-                              </label>
-                                </div>
-                            </td>
-                            <td>
-                                <div class="form-check disabled">
-                                    {% if currentPick.pick == currentPick.awayTeam %}
-                                    <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.awayTeam }}" value="{{ currentPick.awayTeam }}" checked disabled> {% else %}
-                                    <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.awayTeam }}" value="{{ currentPick.awayTeam }}" disabled> {% endif %}
-                                    <label class="form-check-label" for="{{ currentPick.awayTeam }}">
-                                        {{ currentPick.awayTeam }}
-                              </label>
-                            </td>
-                            <td><img src="/static/media/{{ currentPick.awayTeam }}.png" alt="{{ currentPick.awayTeam }}" class="img-fluid" width="50" height="50"></td>
-                        </tr>
-                        {% endfor %} {% csrf_token %} {% else %} {% for currentPick in pickData %}
-                        <tr>
-                            <td><img src="/static/media/{{ currentPick.homeTeam }}.png" alt="{{ currentPick.homeTeam }}" class="img-fluid" width="50" height="50"></td>
-                            <td>
-                                <div class="form-check">
-                                    {% if currentPick.pick == currentPick.homeTeam %}
-                                    <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.homeTeam }}" value="{{ currentPick.homeTeam }}" checked> {% else %}
-                                    <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.homeTeam }}" value="{{ currentPick.homeTeam }}">{% endif %}
-                                    <label class="form-check-label" for="{{ currentPick.homeTeam }}">
-                                        {{ currentPick.homeTeam }}
-                              </label>
-                                </div>
-                            </td>
-                            <td>
-                                <div class="form-check">
-                                    {% if currentPick.pick == currentPick.awayTeam %}
-                                    <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.awayTeam }}" value="{{ currentPick.awayTeam }}" checked> {% else %}
-                                    <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.awayTeam }}" value="{{ currentPick.awayTeam }}"> {% endif %}
-                                    <label class="form-check-label" for="{{ currentPick.awayTeam }}">
-                                        {{ currentPick.awayTeam }}
-                              </label>
-                            </td>
-                            <td><img src="/static/media/{{ currentPick.awayTeam }}.png" alt="{{ currentPick.awayTeam }}" class="img-fluid" width="50" height="50"></td>
-                        </tr>
-                        {% endfor %} {% csrf_token %} {% endif %}
-                    </fieldset>
-                </tbody>
-            </table>
-            <input type="submit" class="btn btn-success" value="Save Picks">
-        </form>
+    </div>
 </body>
 {% endblock %}
