--- a/static/css/login.css
+++ b/static/css/login.css
@@ -10,7 +10,7 @@ body {
     align-items: center;
     padding-top: 40px;
     padding-bottom: 40px;
-    background-color: #202124;
+    background-color: #f5f5f5;
 }
 
 .form-signin {
@@ -46,9 +46,4 @@ body {
     margin-bottom: 10px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
-}
-
-.required-field::after {
-    content: "*";
-    color: red;
 }
