--- a/picks/templates/picks/picks.html
+++ b/picks/templates/picks/picks.html
@@ -1,4 +1,5 @@
-{% extends "fantasyFootball/base.html" %} {% block page_content %}
+{% extends "fantasyFootball/base.html" %} {% block page_content %} {% load static %}
+<link href="{% static 'picks/css/picks.css' %}" rel="stylesheet">
 
 <body>
     <div class="container">
@@ -74,8 +75,8 @@
                                     <td>
                                         <div class="form-check disabled">
                                             {% if currentPick.pick == currentPick.homeTeam %}
-                                            <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.homeTeam }}" value="{{ currentPick.homeTeam }}" checked disabled> {% else %}
-                                            <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.homeTeam }}" value="{{ currentPick.homeTeam }}" disabled>{% endif %}
+                                            <input class="form-check-input radio-custom" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.homeTeam }}" value="{{ currentPick.homeTeam }}" checked disabled> {% else %}
+                                            <input class="form-check-input radio-custom" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.homeTeam }}" value="{{ currentPick.homeTeam }}" disabled>{% endif %}
                                             <label class="form-check-label" for="{{ currentPick.homeTeam }}">
                                         {{ currentPick.homeTeam }}
                               </label>
@@ -84,8 +85,8 @@
                                     <td>
                                         <div class="form-check disabled">
                                             {% if currentPick.pick == currentPick.awayTeam %}
-                                            <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.awayTeam }}" value="{{ currentPick.awayTeam }}" checked disabled> {% else %}
-                                            <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.awayTeam }}" value="{{ currentPick.awayTeam }}" disabled> {% endif %}
+                                            <input class="form-check-input radio-custom" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.awayTeam }}" value="{{ currentPick.awayTeam }}" checked disabled> {% else %}
+                                            <input class="form-check-input radio-custom" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.awayTeam }}" value="{{ currentPick.awayTeam }}" disabled> {% endif %}
                                             <label class="form-check-label" for="{{ currentPick.awayTeam }}">
                                         {{ currentPick.awayTeam }}
                               </label>
@@ -99,8 +100,8 @@
                                     <td>
                                         <div class="form-check">
                                             {% if currentPick.pick == currentPick.homeTeam %}
-                                            <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.homeTeam }}" value="{{ currentPick.homeTeam }}" checked> {% else %}
-                                            <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.homeTeam }}" value="{{ currentPick.homeTeam }}">{% endif %}
+                                            <input class="form-check-input radio-custom" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.homeTeam }}" value="{{ currentPick.homeTeam }}" checked> {% else %}
+                                            <input class="form-check-input radio-custom" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.homeTeam }}" value="{{ currentPick.homeTeam }}">{% endif %}
                                             <label class="form-check-label" for="{{ currentPick.homeTeam }}">
                                         {{ currentPick.homeTeam }}
                               </label>
@@ -109,8 +110,8 @@
                                     <td>
                                         <div class="form-check">
                                             {% if currentPick.pick == currentPick.awayTeam %}
-                                            <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.awayTeam }}" value="{{ currentPick.awayTeam }}" checked> {% else %}
-                                            <input class="form-check-input" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.awayTeam }}" value="{{ currentPick.awayTeam }}"> {% endif %}
+                                            <input class="form-check-input radio-custom" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.awayTeam }}" value="{{ currentPick.awayTeam }}" checked> {% else %}
+                                            <input class="form-check-input radio-custom" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.awayTeam }}" value="{{ currentPick.awayTeam }}"> {% endif %}
                                             <label class="form-check-label" for="{{ currentPick.awayTeam }}">
                                         {{ currentPick.awayTeam }}
                               </label>
