--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -1,39 +1,12 @@
 {% block page_content %}
-<!--<div class="container">
-    {% if form.errors %}
-    <div class="alert alert-danger" role="alert">
-        <strong>Invalid - </strong>Your username and password didn't match. Please try again.
-    </div>
-    {% endif %} {% if next %} {% if user.is_authenticated %}
-    <div class="alert alert-info" role="alert">
-        <strong>Alert - </strong>Your account doesn't have access to this super secret page. To proceed, please login with an account that has access.
-    </div>
-    {% else %}
-    <div class="alert alert-warning" role="alert">
-        Please login to see this page.
-    </div>
-    {% endif %} {% endif %}
 
-    <form method="POST" action="{% url 'login' %}">
-        {% csrf_token %}
-        <table>
-            <tr>
-                <td>{{ form.username.label_tag }}</td>
-                <td>{{ form.username }}</td>
-            </tr>
-            <tr>
-                <td>{{ form.password.label_tag }}</td>
-                <td>{{ form.password }}</td>
-            </tr>
-        </table>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="/static/css/login.css" rel="stylesheet">
+</head>
 
-        <button type="submit" class="btn btn-primary" value="login">Login</button>
-        <input type="hidden" name="next" value="{{ next }}">
-    </form>
-    <a href="account/create">Create Account</a>
-</div>-->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<link href="/static/css/login.css" rel="stylesheet">
 <div class="container text-center">
 
     <body>
