Cleaning up html and fixed league home message functionality

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -5,7 +5,7 @@
         <!--League title and league picker-->
         <div class="row">
             <div class="col-sm-8">
-                <h1 class="display-4card-title">{{ activeLeague }}</h1>
+                <h1>{{ activeLeague }}</h1>
             </div>
             <div class="col-sm-4">
                 <div class="dropdown">
@@ -92,7 +92,7 @@
                     </div>
                     <div class="col-8">
                         <div class="float-right">
-                            <a href="/league/home/" class="btn btn-secondary btn-sm" disabled role="button">League Home</a>
+                            <a href="/league/home/" class="btn btn-secondary btn-sm">League Home</a>
                         </div>
                     </div>
                 </div>
