--- a/league/templates/league/leagueHome.html
+++ b/league/templates/league/leagueHome.html
@@ -7,11 +7,11 @@
             <div class="col-lg-8">
                 <div class="row">
                     <div class="col-sm-8">
-                        <h1 class="card-title league-title">{{ activeLeague }}</h1>
+                        <h1 class="league-title">{{ activeLeague }}</h1>
                     </div>
                     <div class="col-sm-4">
                         {% if leagueAdmin == True %}
-                        <a href="/league/admin/{{ activeLeague }}" class="btn btn-info" role="button">League Settings</a>{% endif %}
+                        <a href="/league/admin/{{ activeLeague }}" class="btn btn-sm btn-info">League Settings</a>{% endif %}
                     </div>
                 </div>
                 <div class="row">
