--- a/home/templates/home/welcome.html
+++ b/home/templates/home/welcome.html
@@ -1,5 +1,5 @@
 <!-- Custom styles for this template -->
-{% extends "fantasyFootball/base.html" %} {% block page_content %}{% load static %}
+{% extends "fantasyFootball/base.html" %} {% block page_content %}
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
     <h1 class="display-4">Welcome!</h1>
@@ -18,6 +18,7 @@
                     <p>Create and invite your friends to a private league, or set up a public league of your own for anyone to join.</p>
                 </div>
                 <a type="button" href="/league/create/" class="btn btn-lg btn-block btn-outline-info main-color">Create one now</a>
+                <a href="/league/home/" class="btn btn-secondary btn-lg" role="button">League Home</a>
             </div>
         </div>
         <div class="card mb-4 box-shadow">
