Fixing welcome page buttons again

--- a/home/templates/home/welcome.html
+++ b/home/templates/home/welcome.html
@@ -17,7 +17,7 @@
                 <div class="my-2 my-md-0 mr-md-3">
                     <p>Create and invite your friends to a private league, or set up a public league of your own for anyone to join.</p>
                 </div>
-                <a type="button" href="/league/create/" class="btn btn-lg btn-block btn-secondary">Create one now</a>
+                <a href="/league/create/" class="btn btn-lg btn-block btn-secondary">Create one now</a>
             </div>
         </div>
         <div class="card mb-4 box-shadow">
@@ -29,7 +29,7 @@
                 <div class="my-2 my-md-0 mr-md-3">
                     <p>Join either a private or public league. Private leagues will require an Administrator to accept you.</p>
                 </div>
-                <a type="button" href="/league/join/" class="btn btn-lg btn-block btn-secondary">Join one now</a>
+                <a href="/league/join/" class="btn btn-lg btn-block btn-secondary">Join one now</a>
             </div>
         </div>
     </div>
