Added logo, cleaned login page a bit. Started to implement logic for admin game locking

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -62,6 +62,7 @@
                                 <th scope="col">Home</th>
                                 <th scope="col">Score</th>
                                 <th scope="col">Away</th>
+                                <th scope="col">Pick</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -76,6 +77,7 @@
                                 <td class="text-danger">{{ currentGame.homeTeam }} {{ currentGame.homeScore }} - {{ currentGame.awayTeam }} {{ currentGame.awayScore }}</td>
                                 {% endif %}
                                 <td><img src="/static/media/{{ currentGame.awayTeam }}.png" alt="{{ currentGame.awayTeam }}" class="img-fluid" width="50" height="50"></td>
+                                <td>Check</td>
                             </tr>
                             {% endfor %}
                         </tbody>
