--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -10,10 +10,9 @@
 <div class="container text-center">
 
     <body>
-        <img class="mb-4" src="/static/media/logo.png" alt="" width="72" height="72">
+        <img class="mb-2 img-fluid rounded" src="/static/media/logoTitle.png">
         <form class="form-signin" method="POST" action="{% url 'login' %}">
             {% csrf_token %}
-            <h1 class="h3 mb-3 font-weight-normal">Fantasy Football Pool</h1>
             <h6 class="font-weight-normal">Please sign in</h6>
             {% if form.errors %}
             <div class="alert alert-danger" role="alert">
@@ -28,10 +27,14 @@
                 Please login to see this page.
             </div>
             {% endif %} {% endif %}
-            <label for="username" class="sr-only">{{ form.username.label_tag }}</label>
-            <input type="username" name="username" id="username" class="form-control" placeholder="Username" required autofocus>
-            <label for="password" class="sr-only">{{ form.password.label_tag }}</label>
-            <input type="password" name="password" id="password" class="form-control" placeholder="Password" required>
+            <div class="mb-1">
+                <label for="username" class="sr-only">{{ form.username.label_tag }}</label>
+                <input type="username" name="username" id="username" class="form-control" placeholder="Username" required autofocus>
+            </div>
+            <div>
+                <label for="password" class="sr-only">{{ form.password.label_tag }}</label>
+                <input type="password" name="password" id="password" class="form-control" placeholder="Password" required>
+            </div>
             <button type="submit" class="btn btn-primary" value="login">Login</button>
             <input type="hidden" name="next" value="{{ next }}">
             <div>
