--- a/command/templates/command/command.html
+++ b/command/templates/command/command.html
@@ -11,30 +11,7 @@
         <input type="submit" class="btn btn-primary" value="Create new season">
     </form>
     <hr>
-    <div class="dropdown">
-        <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Lock Week
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="lock/1/">Week 1</a>
-            <a class="dropdown-item" href="lock/2/">Week 2</a>
-            <a class="dropdown-item" href="lock/3/">Week 3</a>
-            <a class="dropdown-item" href="lock/4/">Week 4</a>
-            <a class="dropdown-item" href="lock/5/">Week 5</a>
-            <a class="dropdown-item" href="lock/6/">Week 6</a>
-            <a class="dropdown-item" href="lock/7/">Week 7</a>
-            <a class="dropdown-item" href="lock/8/">Week 8</a>
-            <a class="dropdown-item" href="lock/9/">Week 9</a>
-            <a class="dropdown-item" href="lock/10/">Week 10</a>
-            <a class="dropdown-item" href="lock/11/">Week 11</a>
-            <a class="dropdown-item" href="lock/12/">Week 12</a>
-            <a class="dropdown-item" href="lock/13/">Week 13</a>
-            <a class="dropdown-item" href="lock/14/">Week 14</a>
-            <a class="dropdown-item" href="lock/15/">Week 15</a>
-            <a class="dropdown-item" href="lock/16/">Week 16</a>
-            <a class="dropdown-item" href="lock/17/">Week 17</a>
-        </div>
-    </div>
+    <a href="lock/1/" class="btn btn-sm btn-info">Lock Games</a>
     <hr>
     <div class="dropdown">
         <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
