--- a/fantasyFootball/templates/fantasyFootball/base.html
+++ b/fantasyFootball/templates/fantasyFootball/base.html
@@ -12,7 +12,9 @@
     <link href="/static/css/datatables.min.css" rel="stylesheet">
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/home/">Fantasy Football</a>
+    <a class="navbar-brand" href="#">
+        <img class="rounded img-fluid" src="/static/media/logoTitle.png" width="200" height="auto">
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
